--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.3.1",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2",
-    "dotenv": "^16.3.1"
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "eslint": "^9.15.0"
